Revision history for Dist-Zilla-Plugins-CJM

3.04   NOT
	Dist::Zilla::Role::ModuleInfo
	  - Locally reset $/ $, $\ to default values (just in case)

3.03   December 7, 2010
	Dist::Zilla::Plugin::Metadata
	  - New plugin

	Dist::Zilla::Plugin::TemplateCJM
	  - Only process comments that contain a {{ }} pair.
	    Text::Template breaks on strings that have the closing
	    delimiter without the opening one.

3.02   November 11, 2010
	- Fixed test prerequisites (needed Test::More 0.88)

	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - Use Git::Wrapper instead of Git (RT#60140)
	  - Complain if a module's version exceeds the dist's version
	  - Indicate when the dist's version needs to be incremented
	  - Now has tests

3.01   August 9, 2010
	Dist::Zilla::Plugin::ArchiveRelease
	  - Use File::Copy::move to support cross-filesystem moves (RT#59288)

	Dist::Zilla::Plugin::ModuleBuild::Custom
	  - Now compatible with Dist::Zilla 3 & 4
	  - Now has tests

3.00   May 22, 2010
	- Now requires Dist::Zilla 3

	Dist::Zilla::Plugin::TemplateCJM
	  - Now compatible with Dist::Zilla 3

0.09   April 15, 2010
	Dist::Zilla::Plugin::ArchiveRelease
	  - accept ~ in directory to mean home directory (RT#56433)

0.08   April 14, 2010
	- This distribution is now Dist-Zilla-Plugins-CJM.
	  Dist-Zilla-PluginBundle-CJM now contains only @CJM (and
	  requires this distribution along with the other plugins used
	  by @CJM).
	- Updated all version numbers to 0.08

	Dist::Zilla::Plugin::ArchiveRelease
	  - document the FilePruner role

	Dist::Zilla::Plugin::PodLoom
	  - now distributed separately, in Dist-Zilla-Plugin-PodLoom

	Dist::Zilla::Plugin::TemplateCJM
	  - added build_instructions method
	  - In templates, $changes no longer ends with a newline

0.07   April 1, 2010
	- added tests

0.06   April 1, 2010
	Dist::Zilla::Plugin::ArchiveRelease
	  - add FilePruner for archive directory (Michael Schout)

	Dist::Zilla::Plugin::GitVersionCheckCJM
	Dist::Zilla::Plugin::TemplateCJM