@@ -23,7 +23,7 @@ File::Copy                = 0
 File::HomeDir             = 0.81
 File::Temp                = 0.19 ; newdir
 List::Util                = 0
-Module::Build::ModuleInfo = 0.28
+Module::Metadata          = 0
 Moose                     = 0.65 ; attr fulfills requires
 Moose::Autobox            = 0.09 ; flattten
 Path::Class               = 0
